fix gallery descriptions cut off in mobile

--- a/src/components/art/GalleryItem/GalleryItem.module.css
+++ b/src/components/art/GalleryItem/GalleryItem.module.css
@@ -45,7 +45,7 @@
 }
 
 .description.expanded {
-	max-height: 200px;
+	max-height: 100%;
 	margin-bottom: 1rem;
 }
 
